# Hyperbot

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Combined.sln  README.md  Readme.md  broadcast.proto  building.md  characterData.cpp  characterData.hpp  characterconfig.cpp  characterconfig.h  characterconfig.ui  config.proto  entityGraphicsItem.cpp  entityGraphicsItem.hpp  eventHandler.cpp  eventHandler.hpp  experienceProgressBar.cpp  itemListWidget.cpp  itemListWidget.hpp  itemListWidgetItem.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navmeshView.hpp  noScaleLabel.hpp  packetListWidgetItem.cpp  packetListWidgetItem.hpp  regionGraphicsItem.cpp  regionGraphicsItem.hpp  reinjectablePacketListWidget.hpp  request.proto  requester.cpp  requester.hpp  sro_types.hpp  stats.proto  (+3 more)
Combined/: CMakeLists.txt  Combined.vcxproj  Combined.vcxproj.filters
Combined/src/: bot.cpp  bot.hpp  botConnection.hpp  brokerSystem.cpp  brokerSystem.hpp  characterData.cpp  characterData.hpp  characterInfoModule.cpp  characterInfoModule.hpp  characterLoginData.hpp  chatEventModule.cpp  chatEventModule.hpp  configData.cpp  configData.hpp  event.cpp  eventBroker.cpp  eventBroker.hpp  gameData.cpp  gameData.hpp  helpers.cpp  helpers.hpp  iniReader.cpp  iniReader.hpp  item.cpp  item.hpp  itemData.cpp  itemData.hpp  itemList.cpp  itemList.hpp  loader.cpp  loader.hpp  logging.hpp  loginModule.cpp  loginModule.hpp  main.cpp  opcode.cpp  opcode.hpp  packetBuilding.cpp  packetBuilding.hpp  packetEnums.hpp  (+27 more)
Combined/src/broker/: eventBroker.cpp  eventBroker.hpp  packetBroker.cpp  packetBroker.hpp  timerManager.cpp  timerManager.hpp
Combined/src/config/: config.cpp  config.hpp  configData.cpp  configData.hpp  iniReader.cpp  iniReader.hpp
Combined/src/entity/: entity.cpp  entity.hpp  geometry.hpp
Combined/src/event/: event.cpp  event.hpp
Combined/src/math/: matrix.cpp  matrix.hpp  pointTranslator.hpp  position.cpp  position.hpp  vector.cpp  vector.hpp
Combined/src/module/: characterInfoModule.cpp  characterInfoModule.hpp  chatEventModule.cpp  chatEventModule.hpp  loginModule.cpp  loginModule.hpp  movementModule.cpp  movementModule.hpp  sharedMemoryWriter.cpp  sharedMemoryWriter.hpp  skillUseModule.cpp  skillUseModule.hpp
Combined/src/navmesh/: navmesh.cpp  navmesh.hpp  navmeshParser.cpp  navmeshParser.hpp
Combined/src/packet/: opcode.cpp  opcode.hpp
Combined/src/pk2/: characterData.cpp  gameData.cpp  gameData.hpp  itemData.cpp  itemData.hpp  magicOptionData.hpp  masteryData.cpp  regionInfo.cpp  shopData.cpp  shopData.hpp  skillData.cpp  skillData.hpp  teleportData.cpp  textItemAndSkillData.cpp  textItemAndSkillData.hpp  textZoneNameData.cpp  textZoneNameData.hpp
Combined/src/shared/: silkroad_security.cpp  silkroad_security.h  stream_utility.cpp  stream_utility.h
Combined/src/state/: entity.cpp  entity.hpp  entityTracker.cpp  self.cpp  self.hpp  skillEngine.cpp  skillEngine.hpp  worldState.cpp  worldState.hpp
Combined/src/storage/: buybackQueue.cpp  buybackQueue.hpp  item.cpp  item.hpp  itemList.cpp  itemList.hpp  storage.cpp  storage.hpp
Combined/src/type_id/: categories.cpp  categories.hpp  typeCategory.cpp  typeCategory.hpp
Combined/src/ui/: userInterface.cpp  userInterface.hpp
Combined/test/: singleRegionNavmeshTriangulationTest.cpp
SilkroadLib/: CMakeLists.txt
SilkroadLib/include/silkroad_lib/: constants.h  scalar_types.h  shared_io.h
SilkroadLib/src/pk2/: pk2ReaderModern.cc
bot/: .gitignore  CMakeLists.txt  CMakeSettings.json
bot/Hyperbot/: CMakeLists.txt
bot/Hyperbot/src/: bot.cpp  helpers.cpp  hyperbot.cpp  hyperbot.hpp  loader.cpp  main.cpp  packetProcessor.cpp  proxy.cpp  proxy.hpp  session.cpp  silkroadConnection.hpp  statAggregator.cpp  statAggregator.hpp
bot/common/: Common.h  common.cpp  common.h  shared_io.cpp  shared_io.h
bot/documents/: Readme.md  pk2-bot-ui-thoughts.md
bot/hyperbot/: CMakeLists.txt
bot/loaderDll/: CMakeLists.txt  loaderDll.cpp
bot/src/: bot.cpp  bot.hpp  characterLoginInfo.hpp  clientManagerInterface.cpp  clientManagerInterface.hpp  flags.cpp  flags.hpp  helpers.cpp  helpers.hpp  hyperbot.cpp  hyperbot.hpp  loader.cpp  loader.hpp  main.cpp  packetLogger.cpp  packetLogger.hpp  packetProcessor.cpp  packetProcessor.hpp  proxy.cpp  proxy.hpp  session.cpp  session.hpp  silkroadConnection.cpp  silkroadConnection.hpp  statAggregator.cpp  statAggregator.hpp  tensorboard.cpp  tensorboard.hpp
bot/test/: observationSerializationTest.cpp  replayBufferTest.cpp  singleRegionNavmeshTriangulationTest.cpp
bot/tools/: addNewStateMachine.py
client_manager/: CMakeLists.txt  clientManager.cpp  clientManager.hpp  main.cpp
loaderDll/: CMakeLists.txt  loaderDll.cpp  loaderDll.vcxproj  loaderDll.vcxproj.filters
loader_dll/: CMakeLists.txt  loaderDll.cpp
loader_dll/detours/: detours.cpp
rl_ui/: CMakeLists.txt  aggregatedStatsWidget.cpp  aggregatedStatsWidget.hpp  barStyles.cpp  barStyles.hpp  cardDashboardWidget.cpp  cardDashboardWidget.hpp  characterCardWidget.cpp  characterCardWidget.hpp  characterCardWidget.ui  characterCellWidget.cpp  characterCellWidget.hpp  characterDetailDialog.cpp  characterDetailDialog.hpp  characterDetailDialog.ui  characterDetailWidget.cpp  characterDetailWidget.hpp  characterDetailWidget.ui  characterGridWidget.cpp  characterGridWidget.hpp  characterTileWidget.cpp  characterTileWidget.hpp  checkpointWidget.cpp  checkpointWidget.hpp  checkpointWidget.ui  checkpointwidget.ui  config.cpp  config.hpp  dashboardWidget.cpp  dashboardWidget.hpp  dashboardwidget.ui  draggableTableWidget.cpp  draggableTableWidget.hpp  fleetManagerWindow.cpp  fleetManagerWindow.hpp  hyperbot.cpp  hyperbot.hpp  hyperbotConnect.cpp  hyperbotConnect.hpp  hyperbotConnect.ui  (+23 more)
silkroad_lib/: CMakeLists.txt
silkroad_lib/src/: blowfish.cc  blowfish.cpp  dll_config.hpp  edx_labs.cc  edx_labs.cpp  entity.cc  entity.cpp  entity.hpp  file_util.cc  file_util.cpp  position.cpp  position.hpp  position_math.cc  position_math.cpp  shared_io.cc  shared_io.cpp  storage.cpp
silkroad_lib/test/: test.cpp
test/: test.cc
(+1283 files in other folders)
